# taskpilot

./: CLAUDE.md  LICENSE  Makefile  actions.py  channel_template.mjs  daemon.py  liveness.py  package-lock.json  package.json  pyproject.toml  rotation.py  server.py  spawner.py  spawner_cli.py  store.py  taskpilot-recover.sh
.claude/: settings.json
.claude-plugin/: plugin.json
hooks/: _record.py  on-notification.py  on-prompt.py  on-stop.py
skills/manage/: SKILL.md
skills/spawn/: SKILL.md
skills/status/: SKILL.md
tests/: test_channel_validation.py  test_daemon.py  test_liveness.py  test_server.py  test_spawner.py  test_store.py  test_taskpilot_home_env.py
